--- a/package.json
+++ b/package.json
@@ -20,13 +20,18 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@angular/router": "^7.2.15",
     "@ionic-native/core": "~4.20.0",
     "@ionic-native/splash-screen": "~4.20.0",
     "@ionic-native/status-bar": "~4.20.0",
+    "@ionic/angular": "^4.4.0",
     "@ionic/storage": "2.2.0",
+    "angularfire2": "^5.1.3",
+    "firebase": "^6.0.2",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
-    "rxjs": "5.5.11",
+    "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.29"
   },
